# ChangeLog for dev-java/commons-io
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-io/ChangeLog,v 1.45 2009/02/04 12:23:41 betelgeuse Exp $

  04 Feb 2009; Petteri Räty <betelgeuse@gentoo.org>
  -commons-io-1.3.1.ebuild, -commons-io-1.3.2.ebuild:
  Remove old versions.

  11 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> commons-io-1.4.ebuild:
  amd64 stable, bug #212639

  11 Mar 2008; Brent Baude <ranger@gentoo.org> commons-io-1.4.ebuild:
  stable ppc64, bug 212639

  08 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org> commons-io-1.4.ebuild:
  Stable on ppc, see bug #212639.

  08 Mar 2008; Markus Meier <maekke@gentoo.org> commons-io-1.4.ebuild:
  x86 stable, bug #212639

*commons-io-1.4 (06 Feb 2008)

  06 Feb 2008; Miroslav Šulc <fordfrog@gentoo.org> +commons-io-1.4.ebuild:
  Version bump

  25 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  commons-io-1.3.2.ebuild:
  Stable on ppc, bug #198992.

  24 Nov 2007; Petteri Räty <betelgeuse@gentoo.org>
  commons-io-1.3.2.ebuild:
  Only run tests when userpriv is enabled and rewrite build.xml to use clonevm
  so that we can change java.io.tmpdir to $T.

  19 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  commons-io-1.3.2.ebuild:
  Quoted var

  19 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  commons-io-1.3.2.ebuild:
  amd64 stable, bug #198992.

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> commons-io-1.3.2.ebuild:
  Stable on ppc64; bug #198992

  17 Nov 2007; Dawid Węgliński <cla@gentoo.org> commons-io-1.3.2.ebuild:
  Stable on x86 (bug #198992)

  29 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> -commons-io-1.3.ebuild:
  Remove old version.

  14 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  commons-io-1.3.1.ebuild:
  stable x86, bug 187611

  08 Aug 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  commons-io-1.3.1.ebuild:
  amd64 stable, bug #187611
