@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/commons-io
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-io/ChangeLog,v 1.45 2009/02/04 12:23:41 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-io/ChangeLog,v 1.46 2009/07/25 10:08:12 nelchael Exp $
+
+  25 Jul 2009; Krzysiek Pawlik <nelchael@gentoo.org> commons-io-1.4.ebuild:
+  Remove FEATURES test.
 
   04 Feb 2009; Petteri Räty <betelgeuse@gentoo.org>
   -commons-io-1.3.1.ebuild, -commons-io-1.3.2.ebuild:
